unpackaged/main/default/objects/FSL__Gantt_Filter__c/FSL__Gantt_Filter__c.object-meta.xml
<CustomObject>
    <label>Gantt Filter</label>
    <nameField>
        <label>Gantt Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gantt Filters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>