unpackaged/main/default/objects/FSL__Gantt_Filter__c/fields/FSL__Criterias__c.field-meta.xml
<CustomField>
    <fullName>FSL__Criterias__c</fullName>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>