unpackaged/main/default/objects/FSL__Gantt_Filter__c/fields/FSL__Days_before_horizon__c.field-meta.xml
<CustomField>
    <fullName>FSL__Days_before_horizon__c</fullName>
    <label>Days before horizon</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>