unpackaged/main/default/objects/FSL__Gantt_Filter__c/fields/FSL__Displayed_Fields__c.field-meta.xml
<CustomField>
    <fullName>FSL__Displayed_Fields__c</fullName>
    <label>Displayed Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>