unpackaged/main/default/objects/FSL__Gantt_Filter__c/fields/FSL__Hidden__c.field-meta.xml
<CustomField>
    <fullName>FSL__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>