unpackaged/main/default/objects/FSL__Gantt_Filter__c/fields/FSL__Public__c.field-meta.xml
<CustomField>
    <fullName>FSL__Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>